only export series for same axis into same chart type element, tdf#84347

Change-Id: I2b8b962054b0e1ca98db3929c6692e7c354e6a93